After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 604391 - Gtk-CRITICAL **: gtk_widget_is_ancestor: assertion `ancestor != NULL' when switching between tab
Gtk-CRITICAL **: gtk_widget_is_ancestor: assertion `ancestor != NULL' when sw...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkNotebook
2.20.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 617549 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-12-11 20:10 UTC by Baptiste Mille-Mathias
Modified: 2010-07-19 13:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (942 bytes, patch)
2010-03-23 13:47 UTC, Christian Persch
none Details | Review
Fix critical warnings on scroll events (820 bytes, patch)
2010-07-05 23:10 UTC, Christian Persch
committed Details | Review

Description Baptiste Mille-Mathias 2009-12-11 20:10:31 UTC
each time I switch to a tab, the following warning is displayed:
Gtk-CRITICAL **: gtk_widget_is_ancestor: assertion `ancestor != NULL' when switching between tab.

Tried in evince properties windows, nautilus tab & gtk+ master.
Comment 1 Christian Persch 2009-12-12 10:45:10 UTC
Can you get a backtrace from the warning?
Comment 2 Baptiste Mille-Mathias 2009-12-13 10:02:34 UTC
sure,

Gtk-CRITICAL **: gtk_widget_is_ancestor: assertion `ancestor != NULL' failed
aborting...

Program received signal SIGTRAP, Trace/breakpoint trap.
IA__g_logv (log_domain=<value optimized out>, log_level=G_LOG_LEVEL_CRITICAL, format=0x6b77e5 "%s: assertion `%s' failed", args1=0xbfffe6ac "\306\364;\001)\373:\001\300_#") at gmessages.c:555
555		  g_private_set (g_log_depth, GUINT_TO_POINTER (depth));
(gdb) thread apply all bt

Thread 1 (Thread 0xb7fdb970 (LWP 31353))

  • #0 IA__g_logv
  • #1 IA__g_log
    at gmessages.c line 569
  • #2 IA__g_return_if_fail_warning
    at gmessages.c line 584
  • #3 IA__gtk_widget_is_ancestor
    at gtkwidget.c line 8223
  • #4 gtk_notebook_scroll
    at gtknotebook.c line 2592
  • #5 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 84
  • #6 g_type_class_meta_marshal
    at gclosure.c line 878
  • #7 IA__g_closure_invoke
    at gclosure.c line 767
  • #8 signal_emit_unlocked_R
    at gsignal.c line 3285
  • #9 IA__g_signal_emit_valist
    at gsignal.c line 2990
  • #10 IA__g_signal_emit
    at gsignal.c line 3037
  • #11 gtk_widget_event_internal
    at gtkwidget.c line 4938
  • #12 IA__gtk_propagate_event
    at gtkmain.c line 2416
  • #13 IA__gtk_main_do_event
    at gtkmain.c line 1621
  • #14 gdk_event_dispatch
    at gdkevents-x11.c line 2372
  • #15 g_main_dispatch
    at gmain.c line 1960
  • #16 IA__g_main_context_dispatch
    at gmain.c line 2513
  • #17 g_main_context_iterate
    at gmain.c line 2591
  • #18 IA__g_main_loop_run
    at gmain.c line 2799
  • #19 IA__gtk_main
    at gtkmain.c line 1217
  • #20 main
    at nautilus-main.c line 544

Comment 3 Emilio Pozuelo Monfort 2010-03-14 20:14:08 UTC
I get this warning too. It only happens when switching tabs with the mouse wheel, not if I click on the tabs directly.
Comment 4 Christian Persch 2010-03-23 13:47:33 UTC
Created attachment 156866 [details] [review]
proposed patch
Comment 5 Javier Jardón (IRC: jjardon) 2010-05-02 13:38:19 UTC
Still valid in GTK+ 2.20
Comment 6 Javier Jardón (IRC: jjardon) 2010-05-03 19:01:08 UTC
*** Bug 617549 has been marked as a duplicate of this bug. ***
Comment 7 Christian Persch 2010-07-05 23:10:11 UTC
Created attachment 165319 [details] [review]
Fix critical warnings on scroll events

Bug #604391.
Comment 8 Matthias Clasen 2010-07-06 19:09:11 UTC
Comment on attachment 165319 [details] [review]
Fix critical warnings on scroll events

Please commit to gtk-2-22 as well, thanks.
Comment 9 Javier Jardón (IRC: jjardon) 2010-07-19 13:30:45 UTC
Comment on attachment 165319 [details] [review]
Fix critical warnings on scroll events

master: commit 1af1362a369bb79deaeec8d5bf580c97df6c0c87
gtk-2-22: 8f42a13ce79232fa17f1caf2a75fab4947e439af