gtknotebook: Fix critical warnings on scroll events

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=604391